sass/style.scss
@import 'reset';

//// VARIABLES ////
$primary-font-color: #fff;
$secondary-font-color: #58388b;
$secondary-font-color-bright: #d59ffd;
$primary-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
  sans-serif;
$highlight-color: #d25dda;
$secondary-color: #d59ffd;
$main-text-size: 4rem;
$site-width: 27rem;
$mobile-display: block;
$desktop-display: none;
$tile-size: 100px;

//// WRAPPERS ////
.site-wrapper {
  max-width: $site-width;
  margin: 2.5em auto;
  background: linear-gradient(
    -20deg,
    #be7cf6,
    #9142d8,
    #7b31c1,
    #6620aa,
    #783db7,
    #8957c2,
    #6d3fae,
    #6539a8,
    #5e33a3,
    #552b9d,
    #5e34ae,
    #6d42c3
  );
  color: $primary-font-color;
  font-family: $primary-font-family;
}

//// HEADER ////
.header {
  height: 90vh;
  display: grid;
  grid-template-rows: min-content 1fr;
  align-items: center;
}

.navbar {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;

  &__home {
    justify-self: flex-start;
  }

  &__menu {
    justify-self: flex-end;
  }

  &__menu--desktop {
    display: $desktop-display;
  }

  &__menu--mobile {
    display: $mobile-display;
    outline-color: $secondary-color;
    background: transparent;
    cursor: pointer;
  }

  &__icon {
    width: 30px;
  }
}

.main-text {
  width: 80%;
  display: flex;
  flex-direction: column;
  font-size: $main-text-size;

  &__highlight {
    color: $highlight-color;
  }

  &__inseparable {
    white-space: nowrap;
  }
}

//// SECTIONS ////
.section {
  display: grid;
  overflow: hidden;

  &__header {
    width: 90%;
    margin-bottom: 3em;

    &--alternative {
      justify-self: flex-end;
    }

    &--small {
      width: 70%;
    }
  }

  &__content {
    margin-bottom: 5em;
  }
}

//// ABOUT SECTION ////
.about {
  display: grid;
  grid-template-areas:
    'intro'
    'image'
    'details'
    'download';
  gap: 2em;

  &__image {
    width: 100%;
    border-radius: 20px;
    grid-area: image;
  }

  &__intro {
    display: grid;
    grid-area: intro;
    gap: 1em;
    font-size: 1.7rem;
  }

  &__highlight-text {
    color: $highlight-color;
  }

  &__details {
    grid-area: details;
    color: $secondary-color;
    font-size: 1.1rem;
  }
}

@mixin button {
  border-radius: 8px;
  outline-color: $secondary-color;
  color: $primary-font-color;
  cursor: pointer;
}

.download {
  @include button;
  border: 2px solid $secondary-color;
  width: 100px;
  padding: 0.5em 0;
  display: flex;
  grid-area: download;
  justify-content: space-evenly;
  justify-self: center;
  align-items: center;
  background: transparent;
  font-size: 1rem;

  &__icon {
    width: 10%;
    height: auto;
  }
}

//// SKILLS SECTION ////
.tiles {
  display: grid;
  grid-template-rows: repeat(3, 1fr);
  grid-template-columns: repeat(2, 1fr);
  place-items: center;
  gap: 2em;

  &__tile {
    width: $tile-size;
    height: $tile-size * 1.3;
    display: grid;
    place-items: center;

    &--last {
      grid-column: span 2;
    }
  }

  &__tile:hover &__description {
    transform: translateY(0);
  }

  &__tile:hover &__main {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }

  &__main {
    width: $tile-size;
    height: $tile-size;
    border-radius: 20px;
    display: grid;
    place-items: center;
    background: linear-gradient(#9948dd, #4d246f);
    transition: 0.3s border-bottom-left-radius, 0.3s border-bottom-right-radius;
  }

  &__icon {
    width: 70%;
  }

  &__description {
    position: relative;
    width: $tile-size;
    height: $tile-size / 3;
    display: flex;
    flex-direction: column;
    justify-content: center;
    z-index: -1;
    transform: translateY(-101%);
    transition: 0.3s transform;
    background-color: #fff;
    color: $secondary-font-color;
    text-align: center;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
  }

  &__header {
    padding-bottom: 0.2em;
    font-size: 1.3rem;
    font-weight: bold;
  }

  &__details {
    font-size: 0.9rem;
  }
}

//// PORTFOLIO SECTION ////
.projects {
  display: grid;
  grid-template-rows: 1fr min-content;
  gap: 1em;

  &__list {
    display: grid;
    grid-template: repeat(2, 1fr) / repeat(2, min-content);
    justify-content: space-between;
    align-items: center;
  }

  &__list-item {
    height: 50px;
  }

  &__link {
    text-decoration: none;
  }

  &__title {
    color: $secondary-font-color-bright;
    font-size: 1.5rem;
    white-space: nowrap;
  }

  &__link:hover &__title {
    color: $primary-font-color;
  }

  &__line {
    padding: 5px 5px;
    position: relative;
    left: 35%;
    color: transparent;
    transition: 0.3s left;

    &::before {
      content: '';
      position: absolute;
      left: -35%;
      top: 50%;
      width: 35%;
      border-bottom: 2px solid $primary-font-color;
      transform: translateY(-50%);
      transition: 0.3s width, 0.3s left;
    }
  }

  &__link:hover &__line {
    color: $secondary-font-color-bright;
    left: 15%;

    &::before {
      left: -15%;
      width: 15%;
    }
  }

  &__details {
    display: grid;
    gap: 1.5em;
  }

  &__image {
    width: 100%;
    border-radius: 15px;
  }
}

//// CONTACT SECTION ////
.contact {
  padding: 1em;
  border-radius: 20px;
  display: grid;
  justify-items: center;
  background-color: #fff;

  &__info {
    padding: 2.5em;
    display: grid;
    gap: 2em;
    background-color: #9948dd;
    border-radius: 20px;
    box-sizing: border-box;
  }

  &__header {
    font-size: 2rem;
  }

  &__details {
    width: 60%;
    font-size: 0.9rem;
    line-height: 1.12rem;
    color: #eed6ff;
  }

  &__item {
    display: flex;
    align-items: center;
    gap: 0.7em;
  }

  &__icon-set {
    display: grid;
    grid-auto-columns: min-content;
    gap: 1.5em;
    place-items: center;
  }

  &__icon-wrapper {
    grid-row: 1;
  }

  &__icon {
    width: 13px;

    &--large {
      width: 18px;
    }
  }
}

.form {
  width: 100%;
  margin: 2em 0 1em 0;
  display: grid;
  gap: 1em;
  justify-items: center;

  &__entry {
    position: relative;
    width: 90%;
    height: 30px;

    &--large {
      height: 100px;
    }
  }

  &__label {
    position: absolute;
    left: 0;
    top: 0;
    z-index: 1;
    color: #9948dd;
  }

  &__input {
    position: absolute;
    width: 100%;
    border: none;
    border-bottom: 1px solid #9948dd;
    outline: none;
    left: 0;
    bottom: 0;
    color: $secondary-font-color;

    &--area {
      height: 82%;
      resize: none;
    }
  }

  &__button {
    @include button;
    padding: 1em;
    margin-top: 1em;
    background-color: #9948dd;

    &:hover {
      background-color: $secondary-font-color;
    }
  }
}

//// COPYRIGHT ////
.copyright {
  margin-left: auto;
  width: 100px;
  color: #e9cbff;
  font-size: 0.8rem;
}

